# Elxr-avatar

./: .dockerignore  .firebaserc  .gitignore  .replit  BACKGROUND_JOBS.md  BUNDLE_OPTIMIZATION.md  CLAUDE.md  Dockerfile  IFRAME_EMBEDS.md  IFRAME_EMBEDS_PRODUCTION.html  PERSONALITY_PROMPT_COMPARISON.md  PRODUCTION_IFRAME_LIST.txt  TESTING.md  check-and-setup-db.js  firebase.json  nohup.out  package-lock.json  package.json  pyproject.toml  railway.toml  replit.md  tailwind.config.ts  test-db-connection.js  vector_store.db  vite.admin.config.ts  vite.config.ts  vitest.config.ts
attached_assets/: Pasted--1-This-may-be-artificial-intelligence-but-the-wisdom-is-very-real-2-Give-me-a-second-I-m--1761935038641_1761935038641.txt  Pasted--Acknowledgment-pre-cache-triggered-for-thad-caching-st_1765289390575.txt  Pasted--Audio-capture-ended-injected-js-214-GET-https-5fab7786_1764699058793.txt  Pasted--Audio-capture-ended-injected-js-37-Inactivity-timer-cleared-and-reset-injected-js-37-Stream-ready-1764626828766_1764626828767.txt  Pasted--Avatar-voice-config-check-heygenVoiceId-f432f2348d9948_1765219700941.txt  Pasted--Conversation-controller-barge-in-listening-state-idle-_1771480590370.txt  Pasted--Copyright-c-2024-2025-Daily-SPDX-License-Identifier-BSD-2-Clause-License-import-os-i-1763786380930_1763786380930.txt  Pasted--ELXR-Replit-Project-Below-are-all-project-files-combined-Split-them-into-individual-files-in-Rep-1763790608527_1763790608528.txt  Pasted--ELXR-Sign-In-Prompt-with-Memory-Toggle-Purpose-Let-users-choose-if-their-avatar-conversations--1760247565768_1760247565768.txt  (+115 more)
(+251 files in other folders)
